--- a/.gitignore
+++ b/.gitignore
@@ -1,21 +1,2 @@
-# See http://help.github.com/ignore-files/ for more about ignoring files.
-
-# Mac OS X
-.DS_Store
-._.*
-._*
-
-# Ignore local editor
-.project
-.settings
-.idea
-*.swp
-tags
-nbproject/*
-
-# Windows
-Thumbs.db
-
-npm-debug.log
-node_modules/
-dist/
+node_modules
+yarn.lock
